<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Help Chennai </string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item >Locate Safe Place</item>
        <item >Supplies</item>
        <item >Share My Home</item>
        <item >Track People</item>
        <item >Climate</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/safe</item>
        <item>@drawable/supplies</item>
        <item>@drawable/home</item>
        <item>@drawable/track</item>
        <item>@drawable/climate</item>
    </array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="yahoo">Powered by YAHOO</string>
    <string name="location">Chennai</string>
    <string name="condition">Condition</string>
    <string name="Temperature">Temperature</string>
    <string name="name">Name:</string>
    <string name="formheading">Mark YourSelf as safe</string>
    <string name="phonenumber">Enter your phone Number</string>
    <string name="Comments">your signature</string>
    <string name="phone">PhoneNumber</string>
    <string name="url">http://helpchennai.netau.net/</string>

</resources>