<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Temperature"
        android:id="@+id/temperature"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="34dp"
        android:textStyle="bold|italic"
        android:layout_below="@+id/climateimg"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/condition"
        android:id="@+id/condition"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/temperature"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/location"
        android:id="@+id/location"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:layout_below="@+id/condition"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/yahoo"
        android:id="@+id/yahoo"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="33dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/climateimg"
        android:src="@drawable/na"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/yahoo"
        android:layout_alignEnd="@+id/yahoo"
        android:layout_marginTop="33dp" />
</RelativeLayout>