<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="10dp">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="100dp"
             android:orientation="vertical"
             android:id="@+id/header">
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="@string/formheading"
                 android:padding="20dp"
                 android:gravity="center_vertical|center_horizontal" />
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_below="@+id/header"
             android:padding="20dp"
             android:id="@+id/linearLayout">
             <EditText
                 android:layout_width="250dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:hint="@string/name"
                 />
             <Space
                 android:layout_width="match_parent"
                 android:layout_height="20dp" />
             <EditText
                 android:layout_width="250dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:hint="@string/phonenumber"
                 />
             <Space
                 android:layout_width="match_parent"
                 android:layout_height="20dp" />
             <EditText
                 android:layout_width="250dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:hint="@string/Comments"
                 android:inputType="textMultiLine"
                 android:lines="5"/>

         </LinearLayout>

         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="I am Safe"
             android:id="@+id/button3"
             android:layout_marginTop="53dp"
             android:layout_below="@+id/linearLayout"
             android:layout_centerHorizontal="true" />

     </RelativeLayout>
</ScrollView>